--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,5 +8,12 @@
   "/assets/js/others.js": "/assets/js/others.js",
   "/assets/js/app.js": "/assets/js/app.js",
   "/assets/css/main.css": "/assets/css/main.css",
-  "/assets/js/main.js": "/assets/js/main.js"
+  "/assets/js/main.js": "/assets/js/main.js",
+  "/mix.js": "/mix.js",
+  "/assets/css/public.css": "/assets/css/public.css",
+  "/assets/css/public2.css": "/assets/css/public2.css",
+  "/assets/css/publicvendor.css": "/assets/css/publicvendor.css",
+  "/assets/js/*.js": "/assets/js/*.js",
+  "/assets/js/public.js": "/assets/js/public.js",
+  "/assets/js/publicvendor.js": "/assets/js/publicvendor.js"
 }
